--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,10 @@
-﻿**/.dockerignore
+﻿**/bin/
+**/obj/
+**/*.user
+**/*.suo
+**/*.pdb
+**/.vs/
+**/.git/
 **/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
-**/.idea
-**/*.*proj.user
-**/*.dbmdl
-**/*.jfm
-**/azds.yaml
-**/bin
-**/charts
-**/docker-compose*
-**/Dockerfile*
-**/node_modules
-**/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
-LICENSE
-README.md
+Dockerfile*
+*.md
