--- a/back/appsettings.json
+++ b/back/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-small-recipe-ab8ufpbg-pooler.eu-west-2.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_n9fVOmLl4TPQ;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": ""
   }
 }
