Fix bug about environment variable

--- a/back/.env
+++ b/back/.env
@@ -1,1 +1,1 @@
-POSTGRES_CONNECTION_STRING=Host=ep-small-recipe-ab8ufpbg-pooler.eu-west-2.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_n9fVOmLl4TPQ;SSL Mode=Require;Trust Server Certificate=true
+ConnectionStrings__DefaultConnection="Host=ep-small-recipe-ab8ufpbg-pooler.eu-west-2.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_n9fVOmLl4TPQ;Ssl Mode=Require;Trust Server Certificate=true;Channel Binding=Require"
