--- a/back/.env
+++ b/back/.env
@@ -1,1 +1,3 @@
-ConnectionStrings__DefaultConnection="Host=ep-small-recipe-ab8ufpbg-pooler.eu-west-2.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_n9fVOmLl4TPQ;Ssl Mode=Require;Trust Server Certificate=true;Channel Binding=Require"
+DB_CONNECTION_OLD="Host=ep-small-recipe-ab8ufpbg-pooler.eu-west-2.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_n9fVOmLl4TPQ;Ssl Mode=Require;Trust Server Certificate=true;Channel Binding=Require"
+
+DB_CONNECTION: "Host=localhost;Database=csepicerie;Username=csepicerie_user;Password=csepicerie_pass"
