--- a/back/appsettings.json
+++ b/back/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=localhost;Database=csepicerie;Username=csepicerie_user;Password=csepicerie_pass"
   }
 }
